# vroger11.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  404.md  404_fr.md  CNAME  Gemfile  README.md  _config.yml  accueil.md  blog.md  blogue.md  contact.md  contact_fr.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  index.md  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tags.json
_includes/: analytics.html  disqus.html  footer.html  head.html  header.html  icon-X.html  icon-reddit.html
_layouts/: blog.html  home.html  post.html
_posts/: 2019-09-08-bonjour-le-monde.markdown  2019-09-08-hello-world.markdown  2019-09-09-sauver-les-identifiants-git.markdown  2019-09-09-save-git-credential.markdown  2019-09-09-save-git-credentials.markdown  2019-09-23-multiplexeur-de-terminaux.markdown  2019-09-23-terminal-multiplexers.markdown  2019-10-08-check-writing-nvim.markdown  2019-10-08-check-your-writing-nvim.markdown  2019-10-08-verifier-vos-fautes-nvim.markdown  2019-10-12-first-year-review-as-a-phd-student.markdown  2019-10-12-review-first-year-as-phd-student.markdown  2019-10-12-revue-de-ma-premiere-annee-de-these.markdown  2019-11-06-using-zotero-to-generate-bibtex.markdown  2019-11-06-utiliser-zotero-pour-generater-bibtex.markdown  2020-01-28-ameliorer-votre-experience-bash.markdown  2020-01-28-improve-your-bash-navigation.markdown  2020-01-29-improve-bash-terminal-experience.markdown  2020-01-31-format-a-bootable-usb-key.markdown  2020-01-31-formater-une-cle-usb-d-amorcage.markdown  (+40 more)
_sass/: _base.scss  (+2 more)
(+193 files in other folders)
