[project]
name = "vroger11-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-awesome-pages-plugin==2.10.1",
    "mkdocs==1.6.1",
    "pre-commit==4.3.0",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-glightbox==0.5.1",
    "mkdocs-material==9.6.21",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-mermaid2-plugin==1.2.2",
    "mkdocs-redirects==1.2.2",
    "mkdocs-static-i18n==1.3.0",
    "mkdocs-rss-plugin==1.17.3",
]
