[project]
name = "vroger11-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-awesome-pages-plugin==2.10.1",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-material==9.7.3",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-mermaid2-plugin==1.2.3",
    "mkdocs-redirects==1.2.2",
    "mkdocs-static-i18n==1.3.1",
    "mkdocs-rss-plugin==1.17.9",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
]
